<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDiaglog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bkg_dialog"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDescDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_about"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/layoutDiaglog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDescDialog">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbLight"
                android:paddingStart="15dp"
                android:text="@string/light_damaged"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbAirCondi"
                android:text="@string/aircondi_damaged"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbFan"
                android:text="@string/fan_damaged"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbProjector"
                android:text="@string/projector_damaged"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbOthers"
                android:text="@string/others"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/edtReport"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_edittext"
                android:paddingStart="20dp"
                android:hint="Nhập tại đây"
                android:inputType="text"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnConfirmReport"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_blue"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnSkipReport"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blank"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>