<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtClearAll"
            android:text="@string/clear_all"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textColor="#FF3D00"
            android:textStyle="bold"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoNoti"
            android:text="@string/no_noti"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            style="@style/TEXT"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvNotification"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>